1、调整启动脚本 2、解决在Linux上获取到lo网卡时无法获取MAC地址导致节点不可用的问题